--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
   /* display: block; */
   padding: 0;
   width: 20vw;
-  height: 50vw;
+  height: 60vw;
   margin: 0vw 2vw;
   background-color: white;
   border:black 1px solid;
@@ -22,7 +22,7 @@ body {
   display: inline-block;
   padding: 0;
   width: 70vw;
-  height: 50vw;
-  margin: 0vw;
+  height: 60vw;
+  margin: 0vw 2vw;
   border:black 1px solid;
 }
