--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
   /* display: block; */
   padding: 0;
   width: 25vw;
-  height: 50vw;
+  height: 48vw;
   margin: 0vw 2vw;
   background-color: white;
   border:black 1px solid;
@@ -22,7 +22,14 @@ body {
   display: inline-block;
   padding: 0;
   width: 65vw;
-  height: 50vw;
+  height: 48vw;
   margin: 0vw 2vw;
   border:black 1px solid;
+}
+
+.current-position {
+  position: fixed;
+  display: inline-block;
+  left: 60vw;
+  text-align: center;
 }
